--- a/app/views/sailer/stores/edit.html.haml
+++ b/app/views/sailer/stores/edit.html.haml
@@ -8,7 +8,7 @@
         %p
           = f.input :speciality, label: 'Специализация'
         %p
-          = f.input :goods_type, label: 'Мы продаем', collection: Store::GOOD_TYPES
+          = f.input :ware_type, label: 'Мы продаем', collection: Store::WARE_TYPES
         %p
           = f.input :store_country, label: 'Страна'#, collection: @countries_list
         %p
