--- a/app/views/sailer/goods/index.html.haml
+++ b/app/views/sailer/goods/index.html.haml
@@ -42,9 +42,9 @@
                 - else
                   %td Нет
                 %td #{g.count.to_i}
-                %td #{Good::UNITS.key(g.unit)}
+                %td #{Ware::UNITS.key(g.unit)}
                 %td #{'%.2f' % g.price}
-                %td #{Good::CURRENCIES.key(g.currency)}
+                %td #{Ware::CURRENCIES.key(g.currency)}
                 - if g.last_buying_date.present?
                   %td #{g.last_buying_date.strftime("%m.%d.%Y")}
                 - else
