--- a/app/views/sailer/services/index.html.haml
+++ b/app/views/sailer/services/index.html.haml
@@ -38,7 +38,7 @@
                 - else
                   %td Нет
                 %td #{'%.2f' % s.price}
-                %td #{Service::CURRENCIES.key(s.currency)}
+                %td #{Ware::CURRENCIES.key(s.currency)}
                 - if s.last_buying_date.present?
                   %td #{s.last_buying_date.strftime("%m.%d.%Y")}
                 - else
