--- a/app/views/profiles/_client_form.html.haml
+++ b/app/views/profiles/_client_form.html.haml
@@ -9,6 +9,7 @@
   - else
     %p
       = f.input :date_of_birth, as: :string, label: 'Дата рождения', placeholder: "19.01.1990"
+  %b Информация для покупок
   %p
     = f.input :phone_number, as: :string, label: 'Номер телефона', placeholder: "81234567890"
   %p
