--- a/app/views/stores_choises/show.html.haml
+++ b/app/views/stores_choises/show.html.haml
@@ -30,6 +30,6 @@
               = "Последняя покупка: еще не совершалась, станьте первым!"
         %tr
           %td 
-            = "Местоположение: #{@resource.store_city}, #{@resource.store_country}"
+            = "Местоположение: #{@resource.store_city}, #{@resource.store_country}, #{@resource.adress}"
     %div.col-md-4
       %div.row
