--- a/app/views/sailer/services/index.html.haml
+++ b/app/views/sailer/services/index.html.haml
@@ -2,41 +2,41 @@
   %div.row
     = link_to "В офис", profile_path(@user.profile), class: "btn btn-default btn-sm"
     = link_to "В магазин", store_path(@store.title), class: "btn btn-default btn-sm"
-  %div.row
-    %p
-    = link_to "Добавить новую услугу", new_store_service_path, :class => 'btn btn-primary pull-left'
     %div.col-md-12
-      %br
-      %br
-      - if @resource.any?
-      = will_paginate @resource, renderer: BootstrapPagination::Rails
+      %div.row
+        %p
+        = link_to "Добавить новую услугу", new_store_service_path, class: 'btn btn-primary'
+      %div.row
         %br
-        %table{:class => 'table table-striped table-bordered'}
-          %thead
-            %tr
-              %td
-                %b Название
-              %td
-                %b Категория услуги
-              %td
-                %b Описание
-              %td
-                %b В последний раз купили:
-              %td
-                %b Действия
-          %tbody
-            - @resource.each do |s|
+        - if @resource.any?
+        = will_paginate @resource, renderer: BootstrapPagination::Rails
+          %br
+          %table{:class => 'table table-striped table-bordered'}
+            %thead
               %tr
-                %td #{s.name}
-                %td #{s.category}
-                %td #{s.description}
-                - if s.last_buying_date.present?
-                  %td #{s.last_buying_date.strftime("%m.%d.%Y")}
-                - else
-                  %td Эту услугу еще никто не заказывал
-                  %td
-                    %p
-                      = link_to "Подробнее", store_service_path(@store.title, s), class: "btn btn-default btn-xs btn-block"
-                    %p
-                      = link_to "Удалить", store_service_path(@store.title, s), method: :delete, class: "btn btn-danger btn-block btn-xs", data: { confirm: 'Вы уверены?' }
-      = will_paginate @resource, renderer: BootstrapPagination::Rails
+                %td
+                  %b Название
+                %td
+                  %b Категория услуги
+                %td
+                  %b Описание
+                %td
+                  %b В последний раз купили:
+                %td
+                  %b Действия
+            %tbody
+              - @resource.each do |s|
+                %tr
+                  %td #{s.name}
+                  %td #{s.category}
+                  %td #{s.description}
+                  - if s.last_buying_date.present?
+                    %td #{s.last_buying_date.strftime("%m.%d.%Y")}
+                  - else
+                    %td Эту услугу еще никто не заказывал
+                    %td
+                      %p
+                        = link_to "Подробнее", store_service_path(@store.title, s), class: "btn btn-default btn-xs btn-block"
+                      %p
+                        = link_to "Удалить", store_service_path(@store.title, s), method: :delete, class: "btn btn-danger btn-block btn-xs", data: { confirm: 'Вы уверены?' }
+        = will_paginate @resource, renderer: BootstrapPagination::Rails
