--- a/app/views/sailer/services/show.html.haml
+++ b/app/views/sailer/services/show.html.haml
@@ -32,3 +32,6 @@
           = link_to "Изменить информацию об услуге", edit_store_service_path(@store.title, @resource), class: "btn btn-default btn-block"
         %p
           = link_to "Удалить", store_service_path(@store.title, @resource), class: "btn btn-default", method: :delete, class: "btn btn-danger btn-block", data: { confirm: 'Вы уверены?' }
+        %br
+        %p
+          = link_to "Перечень услуг в торговых точках", store_ware_storages_path(@store.title, ware_id: @resource.id), class: "btn btn-default btn-block"
