--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,9 +11,9 @@
       %div.navbar-header
         %a.navbar-brand{:href => root_path} ВебМолл
       %ul.nav.navbar-nav.pull-left
-        = menu_item 'Товары', goods_choises_path
-        = menu_item 'Услуги', services_choises_path
-        = menu_item 'Магазины', stores_choises_path
+        / = menu_item 'Товары', goods_choises_path
+        / = menu_item 'Услуги', services_choises_path
+        / = menu_item 'Магазины', stores_choises_path
       %ul.nav.navbar-nav.pull-right
         - if user_signed_in?
           = menu_item 'Корзина', calls_path
