--- a/app/views/sailer/goods/edit.html.haml
+++ b/app/views/sailer/goods/edit.html.haml
@@ -10,6 +10,10 @@
         %p
           = f.input :description, as: :string, label: 'Описание'
         %p
+          = f.input :currency, as: :select, collection: Ware::CURRENCIES, label: 'Валюта'
+        %p
+          = f.input :currency, as: :select, collection: Ware::UNITS, label: 'Измеряется в'
+        %p
           = f.input :keywords, as: :string, label: 'Ключевые слова', placeholder: "example1, example2, example3"
         %p
           = link_to "Назад", store_good_path(@store.title, @resource), class: "btn btn-default"
