--- a/app/views/sailer/goods/show.html.haml
+++ b/app/views/sailer/goods/show.html.haml
@@ -19,6 +19,12 @@
             = "Описание: #{@resource.description}"
         %tr
           %td
+            = "Стоимость в: #{Ware::CURRENCIES.key(@resource.currency)}"
+        %tr
+          %td
+            = "Измеряется в: #{Ware::UNITS.key(@resource.unit)}"
+        %tr
+          %td
             - if @resource.last_buying_date.present?
               = "В последний раз купили: #{@resource.last_buying_date}"
             - else
