--- a/app/views/sailer/services/edit.html.haml
+++ b/app/views/sailer/services/edit.html.haml
@@ -10,6 +10,8 @@
         %p
           = f.input :description, as: :string, label: 'Описание'
         %p
+          = f.input :currency, as: :select, collection: Ware::CURRENCIES, selected: Ware::CURRENCIES.key('Руб'), label: 'Валюта'
+        %p
           = f.input :keywords, as: :string, label: 'Ключевые слова', placeholder: "example1, example2, example3"
         %p
           = link_to "Назад", store_service_path(@store.title, @resource), class: "btn btn-default"
